# pulse

./: .dockerignore  .gitignore  README.md
apps/web/: Dockerfile  next.config.mjs
apps/web/app/: globals.css
apps/web/components/: account-dock.tsx  archive-page-content.tsx  auth-provider.tsx  digest-settings-card.tsx  interest-profile-panel.tsx  location-onboarding-card.tsx  pulse-map.tsx  pulse-shell.tsx  (+4 more)
deploy/ec2/: .env.ec2.example  Caddyfile  README.md  docker-compose.yml
fixtures/reddit/: low-signal-sample-export.json  nightlife-sample-export.json
services/api/: Dockerfile  pyproject.toml
services/api/app/api/: routes.py
services/api/app/core/: config.py
services/api/app/db/: init.py
services/api/app/schemas/: auth.py  digest.py  recommendations.py
services/api/app/services/: auth.py  digest.py  ingestion.py  recommendations.py  seed.py  spotify_oauth.py  worker_sync.py
services/api/app/taste/: contracts.py  profile_contracts.py  theme_catalog.py
services/api/app/taste/providers/: reddit_export.py  spotify.py
services/api/tests/: test_auth.py  test_digest.py  test_ingestion.py  test_interest_reranking.py  test_recommendations.py  test_reddit_export_provider.py  test_seed.py  test_spotify_oauth.py  test_taste_spotify_provider.py  test_travel.py
services/worker/: Dockerfile  pyproject.toml
services/worker/app/: main.py
services/worker/app/connectors/: curated_venues.py  ticketmaster.py
services/worker/app/core/: config.py
services/worker/app/services/: supply_sync.py
services/worker/tests/: test_supply_sync.py  test_ticketmaster.py
(+3 files in other folders)
